--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -27,10 +27,10 @@
 \FloatBarrier
 \begin{table}[h!]
 	\centering
-	\caption[Parameters for simulated spectra used to find thresholds]{Parameters for simulated spectra used to find thresholds. $E_{sig}$/$E_{scat}$ denote the energy of the signal/scattering background photons, $p_{sig}$/$p_{\beta}$/$p_{scat}$ the probability of a signal/K$_{\beta}$/scattering photons, $\sigma_{scat}$ the width (standard deviation) of the (approximated as Gaussian) scattering peak, $\sigma_{det}$ the standard deviation of (assumed as Gaussian) broadening due to detector noise and $\sigma_{sharing}$ the width of the charge sharing cloud.  As the $K_beta$ peak can be distinguished as a shoulder in the Copper spectra, $K_{\beta}$ is considered as noise there and treated like the scattering noise in the classification, resulting in tighter final thresholds ()resulting in partial rejection of  $K_{\beta}$) compared to counting those photons as signal.}
+	\caption[Parameters for simulated spectra used to find thresholds]{Parameters for simulated spectra used to find thresholds. $E_{sig}$/$E_{scat}$ denote the energy of the signal/scattering background photons, $p_{sig}$/$p_{\beta}$/$p_{scat}$ the probability of a signal/K$_{\beta}$/scattering photons, $\sigma_{scat}$ the standard deviation of the approximated as Gaussian scattering peak, $\sigma_{det}$ the standard deviation the broadening due to detector noise and $\sigma_{sharing}$ the width of the charge sharing.  As the $K_beta$ peak can be distinguished as a shoulder in the Copper spectra, $K_{\beta}$ is considered as noise there and treated like the scattering noise in the classification, resulting in tighter final thresholds and partial rejection of  $K_{\beta}$ compared to counting those photons as signal.}
 	\label{tab:fitvalues}
 	\scriptsize
-	\begin{adjustwidth}{-1em}{-1em}	
+	\begin{adjustwidth}{-2em}{-2em}	
 		\begin{tabular}{lrrrrrrrrrrrr}
 			
 			\toprule
