--- a/Tex/discussion.tex
+++ b/Tex/discussion.tex
@@ -1,8 +1,9 @@
 \section{Discussion}
+The estimated number of overlaid modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the \enquote{optimal} value for unpolarized light ($M=2$), resulting in severely reduced contrast. 
+As the measurement was performed perpendicular the the FEL beam coherent scattering was many orders of magnitude weaker than the fluorescence.  Therefore, in contrast to previous experiments, any observed intensity correlations can only stem from the incoherent fluorescence.
+The disappearance of the observed correlations after defocusing strongly suggests that they actually include spatial information about the sample and are not caused by detector artifacts. This could be further examined in future experiments by simply rotating the detector and observing if the reconstruction rotates as well. The amplitude observed in the foil samples matches approximately the result of the simulation presented in \fref{chap:simulation}  (\fref{fig:simfoil}) after accounting for polarization and multiple emission lines but is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes \cite{inoue2019}. At its root, there might be various causes for this: 1) a longer pulse length as a result of the less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images), 2) the only partially by the regression corrected undersampling and 3) the higher observation angle creating additional spatial modes. For an accurate measurement of the focal width in horizontal and vertical direction, the experiment would have had to be conducted in a small angle regime with the foil placed perpendicular to the beam and the detector placed close to forward direction. 
 
-The estimated number of overlaid modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the \enquote{optimal} value for unpolarized light ($M=2$), resulting in severely reduced contrast. The amplitude of the intensity correlations observed in the foil samples matches approximately the result of the simulation presented in \fref{chap:simulation}  (\fref{fig:simfoil}) after accounting for polarization and multiple emission lines but is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes. At its root, there might be various causes for this: 1) a longer pulse length as a result of the less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images), 2) the only partially by the regression corrected undersampling and 3) the higher observation angle creating additional spatial modes. For an accurate measurement of the focal width in horizontal and vertical direction, the experiment would have had to be conducted in a small angle regime with the foil placed perpendicular to the beam and the detector placed close to forward direction.
-
-The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimated SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample. However, there will be some differences in the reconstructed structure factor due to the iron specificity of IDI and the smaller focal volume capturing fewer aggregates. Mechanical limitations in the experimental setup made is necessary to perform the experiment with the excitation beam under a 45° angle. The path length differences due to this angle and the relatively high thickness of the samples created a large number spatiotemporal modes reducing the contrast. At the time of sample simulations, design, and preparation, this experimental limitation was not yet known and therefore not considered.
+The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimated SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample. However, there will be some differences in the reconstructed structure factor due to the iron specificity of IDI and the smaller focal volume capturing fewer aggregates. Mechanical limitations in the experimental setup made is necessary to perform the experiment with the excitation beam under a 45° angle. The path length differences due to this angle and the relatively high thickness of the samples created a large number spatio-temporal modes reducing the contrast. At the time of sample simulations, design, and preparation, this experimental limitation was not yet known and therefore not considered.
 Optimization of the preparation method resulting either in higher concentrations of non-aggregating particles or to complete aggregation and the formation of super-crystals might lead to stronger features. Also, liquid injectors might be an option, even if there would be clear practical downsides: The tight focus and short Rayleigh length would make it difficult to achieve spatial overlap of the beam and sample and controlling the number of particles in the focal volume would be challenging. Taken together, the results indicate that follow-up measurements should be designed to be in forward direction under the small-angle regime to reduce the detrimental effect of the sample thickness.
 
 The achieved alignment of the crystalline samples after determination of the mean orientation and translational offset is still worse than the resolution of the reconstruction and the size of the expected Bragg peaks. This results most likely in a reduction of the signal contrast through averaging of different pixel pairs not belonging to the same true $\vec{q}$. Mounting of the sample and the damage done during the measurement by the focused beam might have resulted in a slight bending of the thin glass stabilizing the crystal sheet. The resulting variations of the orientation over the scanning of the sample would not have been corrected, as the alignment has only been performed on averaged images.  Furthermore, it has proved to be challenging to validate that the orientation correction works as designed and the Bragg peaks would be reconstructed at the positions chosen as regions-of-interest. A non-comprehensive search using local maxima filter (as used to determine the Bragg peak positions in the simulated correlations for \fref{fig:accesiblebraggq}) did not lead to reasonable, i.e., symmetric and at the correct $\left|\vec{q}\right|$, candidates at other positions.
